--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,16 +1,32 @@
 server {
     listen 80;
     root /var/www/html/public;
-    index index.php index.html;
 
-    location / {
-        try_files $uri /index.php?$query_string;
+    # Archivos estáticos
+    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
+    # Todas las rutas /api/* van a index.php
+    location ~ ^/api {
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
+        fastcgi_param REQUEST_URI $request_uri;
+    }
+
+    # Otros archivos .php
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    # Frontend - servir index.html para todo lo demás
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
