se termina las fases, pendiente API KEY

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,22 +2,12 @@ server {
     listen 80;
     root /var/www/html/public;
 
-    # Archivos estáticos
-    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # API routes - PHP
+    location ~ ^/api/ {
+        try_files $uri /index.php$is_args$args;
     }
 
-    # Todas las rutas /api/* van a index.php
-    location ~ ^/api {
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
-        fastcgi_param REQUEST_URI $request_uri;
-    }
-
-    # Otros archivos .php
+    # PHP handler
     location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
@@ -25,7 +15,13 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    # Frontend - servir index.html para todo lo demás
+    # Static files
+    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Frontend
     location / {
         try_files $uri $uri/ /index.html;
     }
